# triton_bwd

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/triton_bwd/: __init__.py  abtract_tree.py  code_generator.py  constexpr.py  dynamic_assert.py  make_ast.py  triton_bwd.py  triton_bwd_verify.py
tests/: test_ast.py  test_branching.py  test_bsa.py  test_triton_bwd_basic.py  test_triton_bwd_flashattn.py
